plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'application'
	id 'groovy'
}

group = 'raisetech.student.management'
version = '1.0.0'

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

application {
	mainClass = 'raisetech.student.management.StudentManagementApplication'
}

repositories {
	mavenCentral()
	google()
	gradlePluginPortal()
}

dependencies {
	// Spring Boot関連
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// データベース関連
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	// その他のライブラリ
	implementation 'org.apache.commons:commons-lang3:3.14.0'
	implementation 'org.codehaus.groovy:groovy-all:3.0.7'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// テスト関連
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
}

tasks.withType(JavaCompile).configureEach {
	// 開発で使用するJavaバージョン
	javaCompiler = javaToolchains.compilerFor {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
	options.forkOptions.jvmArgs << '-Djdk.attach.allowAttachSelf=true'
}